# DarkneTF

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conf.mk
host/: CMakeLists.txt  Makefile
host/cfg/: coco.data  imagenet1k.data  resnet18.cfg
host/data/: test.list
host/examples/: classifier.c  darknet.c  detector.c
host/include/: darknet.h
host/src/: attack_simulate.c  attack_simulate.h  avgpool_layer.c  avgpool_layer.h  blas.c  blas.h  blas_kernels.c  blas_kernels.cl  box.c  col2im_kernels.c  convolutional_kernels.c  convolutional_kernels.cl  convolutional_layer.c  convolutional_layer.h  data.c  demo.c  detection_layer.c  gemm.c  gemm.h  im2col_kernels.c  image.c  layer.c  local_layer.c  maxpool_layer_kernels.c  network.c  opencl.c  opencl.h  parser.c  parser.h  softmax_layer.c  softmax_layer.h  tee_file_tool.c  tee_flie_tool.h  threadpool.c  threadpool.h  utils.c  verfication_host.c  verfication_host.h  yolo4_layer.c  yolo4_layer.h  (+1 more)
ta1/: Makefile  sub.mk
ta1/include/: darknet_ta1.h  sha256_ta.h  store_ta_weight_ta.h  user_ta_header_defines.h  util_ta.h  verification_ta.h
ta1/src/: main_ta.c  sha256_ta.c  store_weight_ta.c  util_ta.c  verfication_ta.c
ta2/: Makefile  sub.mk
ta2/include/: darknet_ta2.h  user_ta_header_defines.h
ta2/src/: main_ta.c
